--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lite-tree-2",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "새롭게 재탄생하다",
   "main": "index.js",
   "type": "module",
@@ -8,16 +8,22 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["thetree", "theseed", "wiki"],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "thetree",
+    "theseed",
+    "wiki"
+  ],
+  "author": "1ongames",
+  "license": "null",
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
     "@libsql/client": "^0.14.0",
+    "alpinejs": "^3.15.1",
+    "axios": "^1.6.0",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "session-file-store": "^1.5.0",
+    "nunjucks": "^3.2.4",
     "sanitize-html": "^2.11.0",
+    "session-file-store": "^1.5.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
